@@ -1,12 +1,18 @@
 package com.example.accessingdatarest;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jms.core.JmsTemplate;
 import org.springframework.stereotype.Service;
 
+import jakarta.jms.JMSException;
+import jakarta.jms.Message;
+import jakarta.jms.Session;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.stream.Collectors;
@@ -21,6 +27,9 @@ public class PersonDeltaService {
     @Autowired
     private JmsTemplate jmsTemplate;
 
+    @Autowired
+    private ObjectMapper objectMapper;
+
     private Set<Person> previousPersons = new TreeSet<>();
 
     public void calculateAndPushDelta() {
@@ -28,26 +37,40 @@ public class PersonDeltaService {
 
         List<Person> newPersonsList = currentPersons.stream()
                 .filter(person -> !previousPersons.contains(person))
-                .collect(Collectors.toList());
+                .toList();
 
         List<Person> deletedPersonsList = previousPersons.stream()
                 .filter(person -> !currentPersons.contains(person))
-                .collect(Collectors.toList());
+                .toList();
 
         List<Person> updatedPersonsList = currentPersons.stream()
                 .filter(person -> previousPersons.contains(person) && !previousPersons.contains(person))
-                .collect(Collectors.toList());
+                .toList();
 
-        if (!newPersonsList.isEmpty()) {
-            jmsTemplate.convertAndSend("personDeltaTopic", "New Persons: " + newPersonsList);
-        }
-        if (!deletedPersonsList.isEmpty()) {
-            jmsTemplate.convertAndSend("personDeltaTopic", "Deleted Persons: " + deletedPersonsList);
-        }
-        if (!updatedPersonsList.isEmpty()) {
-            jmsTemplate.convertAndSend("personDeltaTopic", "Updated Persons: " + updatedPersonsList);
-        }
+        Map<List<Person>, PersonDeltaType> deltaMap = Map.of(
+                newPersonsList, PersonDeltaType.NEW,
+                deletedPersonsList, PersonDeltaType.DELETED,
+                updatedPersonsList, PersonDeltaType.UPDATED
+        );
+
+        deltaMap.forEach((list, type) -> {
+            if (!list.isEmpty()) {
+                try {
+                    sendMessage("personDeltaTopic", objectMapper.writeValueAsString(list), type);
+                } catch (JsonProcessingException e) {
+                    log.error("Error converting list to JSON", e);
+                }
+            }
+        });
 
         previousPersons = currentPersons;
+    }
+
+    private void sendMessage(String destination, String message, PersonDeltaType type) {
+        jmsTemplate.send(destination, session -> {
+            Message msg = session.createTextMessage(message);
+            msg.setStringProperty("type", type.name());
+            return msg;
+        });
     }
 }
